# Vertikotrol

./: CMakeLists.txt  README.md
res/windows/: app.manifest
src/: main.cc
src/Window/: MainWindow.cc  MainWindow.h
